--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -14,7 +14,7 @@ const { class: className } = Astro.props;
 >
   <div
     class={`
-      mx-auto w-full max-w-6xl p-8 rounded-2xl
+      mx-auto mt-4 w-full max-w-6xl p-8 rounded-2xl
       bg-black/10 text-white font-medium text-lg
       flex gap-4 flex-col items-center justify-center md:flex-row md:justify-between
     `}
