--- a/src/layouts/LinksLayout.astro
+++ b/src/layouts/LinksLayout.astro
@@ -2,6 +2,8 @@
 import "@fontsource/caveat-brush";
 import "@fontsource-variable/montserrat";
 
+import { ViewTransitions } from "astro:transitions";
+
 import Footer from "@/components/footer/Footer.astro";
 import LinksHeader from "@/components/links/LinksHeader.astro";
 
@@ -24,9 +26,10 @@ const { title } = Astro.props;
 		<meta name="description" content={getServicesDescriptionForSeo()} />
 		<link rel="icon" type="image/webp" href="/gaterapia-isotype.webp" />
 		<title>{title}</title>
+		<ViewTransitions />
 	</head>
 	<body>
-		<LinksHeader />
+		<!-- <LinksHeader /> -->
 		<slot />
 		<Footer class="pt-4" />
 	</body>
