--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,20 +3,16 @@ import Layout from "@/layouts/Layout.astro";
 
 import Section from "@/components/Section.astro";
 import Hero from "@/components/sections/hero/Hero.astro";
-import Media from "@/components/sections/media/Media.astro";
 import Services from "@/components/sections/services/Services.astro";
 ---
 
 <Layout title="Gaterapia">
-	<main class="w-full px-4 pb-16 flex flex-col gap-28 sm:gap-40">
-		<Section id="hero" class="md:mt-6 lg:mt-20">
+	<main class="w-full px-4 flex flex-col gap-10 sm:gap-4">
+		<Section id="hero">
 			<Hero />
 		</Section>
 		<Section id="servicios">
 			<Services />
-		</Section>
-		<Section id="medios">
-			<Media />
 		</Section>
 	</main>
 </Layout>
