--- a/src/components/sections/services/ServicesBentoItem.astro
+++ b/src/components/sections/services/ServicesBentoItem.astro
@@ -31,7 +31,7 @@ const { class: className, slug, title, subtitle } = Astro.props;
     `}
   />
   <div
-    class="flex flex-col items-center justify-center px-4 pt-4 md:pt-8 lg:pt-14"
+    class="flex flex-col items-center justify-center px-4 pt-6 md:pt-8 lg:pt-14"
   >
     <h4
       class={`
@@ -53,8 +53,8 @@ const { class: className, slug, title, subtitle } = Astro.props;
     class={`
       backdrop-blur-sm md:backdrop-blur-none
       flex justify-end w-full md:justify-center
-      px-2 py-2 md:px-4 md:pt-0 md:pb-8 lg:pb-14
-      border-t-1 border-white/20 md:border-t-0
+      px-3 py-3 md:px-4 md:pt-0 md:pb-8 lg:pb-14
+      border border-b-0 border-x-0 border-white/20 md:border-t-0
     `}
   >
     <ServiceButton href={`/servicios/${slug}`} />
