refactor(components): 🚚 relocate section components

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "@/layouts/Layout.astro";
 
-import Section from "@/components/Section.astro";
-import Hero from "@/components/sections/hero/Hero.astro";
-import Services from "@/components/sections/services/Services.astro";
+import Section from "@/sections/home/Section.astro";
+import Hero from "@/sections/home/hero/Hero.astro";
+import Services from "@/sections/home/services/Services.astro";
 ---
 
 <Layout title="Gaterapia">
