--- a/src/sections/home/hero/hello/Hello.astro
+++ b/src/sections/home/hero/hello/Hello.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+
 import HeroBentoItem from "../HeroBentoItem.astro";
 
 import HelloTitle from "./HelloTitle.astro";
@@ -28,7 +30,11 @@ const { class: className } = Astro.props;
       text-white
     `}
   >
-    <img
+    <Image
+      width="320"
+      height="80"
+      loading="eager"
+      decoding="async"
       src="/gaterapia-logo.png"
       alt="Logotipo de Gaterapia"
       class="hidden md:block w-80 self-center mt-6 lg:mt-2 pointer-events-none select-none"
