--- a/src/pages/servicios/[...slug].astro
+++ b/src/pages/servicios/[...slug].astro
@@ -1,5 +1,7 @@
 ---
 import type { GetStaticPaths } from "astro";
+
+import { Image } from "astro:assets";
 import { getCollection } from "astro:content";
 
 import Layout from "@/layouts/Layout.astro";
@@ -14,13 +16,48 @@ export const getStaticPaths = (async () => {
 
 const service = Astro.props;
 const { Content } = await service.render();
+
+const { slug } = service;
+const { title, subtitle } = service.data;
 ---
 
-<Layout title="Catsitting">
-  <h1 class="font-['Caveat_Brush'] text-white text-5xl text-center py-6">
-    {service.data.title}
-  </h1>
-  <main class="prose prose-invert">
-    <Content />
+<Layout title={`${title} | Gaterapia`}>
+  <main class="w-full px-4 grid gap-10 sm:gap-4">
+    <section class="grid gap-10 sm:gap-4">
+      <div class="text-white text-center">
+        <h1 class="font-['Caveat_Brush'] text-5xl">
+          {title}
+        </h1>
+        {subtitle && <h2 class="text-2xl">{subtitle}</h2>}
+      </div>
+      <Image
+        width="320"
+        height="320"
+        loading="eager"
+        src={`/services/${slug}.webp`}
+        transition:name={`${slug}_image`}
+        alt={`Foto ilustrativa del servicio de ${title}`}
+        class="service-image mx-auto size-80 md:size-[600px]"
+      />
+    </section>
+    <section class="prose prose-invert">
+      <Content />
+    </section>
   </main>
 </Layout>
+
+<style>
+  .service-image {
+    mask: linear-gradient(
+        to top,
+        transparent 10%,
+        #fff 15% 90%,
+        transparent 95%
+      ),
+      linear-gradient(to left, transparent 10%, #fff 15% 90%, transparent 95%);
+    mask-size: 110% 110%;
+    mask-position: center;
+    mask-repeat: no-repeat;
+    mask-composite: intersect;
+  }
+</style>
