--- a/src/sections/home/services/ServicesBentoItem/Item.astro
+++ b/src/sections/home/services/ServicesBentoItem/Item.astro
@@ -7,12 +7,13 @@ import ItemTitleContainer from "./ItemTitleContainer.astro";
 
 interface Props {
   class?: string;
+  lazy: boolean;
   slug: string;
   subtitle?: string;
   title: string;
 }
 
-const { class: className, slug, title, subtitle } = Astro.props;
+const { class: className, lazy, slug, title, subtitle } = Astro.props;
 ---
 
 <article
@@ -25,6 +26,7 @@ const { class: className, slug, title, subtitle } = Astro.props;
   `}
 >
   <ItemBackground
+    lazy={lazy}
     slug={slug}
     altText={`Foto del servicio de '${title}${subtitle ? ` ${subtitle}` : ""}'`}
   />
