--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,9 @@ import "@fontsource-variable/montserrat";
 
 import { ViewTransitions } from "astro:transitions";
 
+import "@/assets/styles/global.css";
+
+import Background from "@/components/Background.astro";
 import Header from "@/components/header/Header.astro";
 import Footer from "@/components/footer/Footer.astro";
 
@@ -29,14 +32,9 @@ const { title } = Astro.props;
 		<ViewTransitions />
 	</head>
 	<body>
+		<Background />
 		<Header />
 		<slot />
 		<Footer />
 	</body>
 </html>
-
-<style is:global>
-	html, body { min-height: theme(minHeight.screen); }
-	html { font-family: "Montserrat Variable", system-ui, sans-serif; }
-	body { background: linear-gradient(to top left, theme(colors.neutral.800), theme(colors.cerise-red.600)); }
-</style>
