--- a/src/layouts/LinksLayout.astro
+++ b/src/layouts/LinksLayout.astro
@@ -4,6 +4,9 @@ import "@fontsource-variable/montserrat";
 
 import { ViewTransitions } from "astro:transitions";
 
+import "@/assets/styles/global.css";
+
+import Background from "@/components/Background.astro";
 import Footer from "@/components/footer/Footer.astro";
 
 import { getServicesDescriptionForSeo } from "@/lib/data";
@@ -28,14 +31,8 @@ const { title } = Astro.props;
 		<ViewTransitions />
 	</head>
 	<body>
-		<!-- <LinksHeader /> -->
+		<Background />
 		<slot />
 		<Footer class="pt-4" />
 	</body>
 </html>
-
-<style is:global>
-	html, body { min-height: theme(minHeight.screen); }
-	html { font-family: "Montserrat Variable", system-ui, sans-serif; }
-	body { background: linear-gradient(to top left, theme(colors.neutral.800), theme(colors.cerise-red.600)); }
-</style>
