refactor(assets): 🚚 move icons to `/assets` folder

--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -1,10 +1,10 @@
 ---
 import NavbarLink from "./NavbarLink.astro";
 
-import LinksIcon from "@/icons/LinksIcon.astro";
-import EmailIcon from "@/icons/EmailIcon.astro";
-import FacebookLogo from "@/icons/FacebookLogo.astro";
-import InstagramLogo from "@/icons/InstagramLogo.astro";
+import LinksIcon from "@/assets/icons/LinksIcon.astro";
+import EmailIcon from "@/assets/icons/EmailIcon.astro";
+import FacebookLogo from "@/assets/icons/FacebookLogo.astro";
+import InstagramLogo from "@/assets/icons/InstagramLogo.astro";
 
 const SOCIAL_LINKS = [
   {
