--- a/src/sections/home/services/ServicesBentoItem/ItemButton.astro
+++ b/src/sections/home/services/ServicesBentoItem/ItemButton.astro
@@ -1,5 +1,5 @@
 ---
-import ArrowIcon from "@/icons/ArrowIcon.astro";
+import ArrowIcon from "@/assets/icons/ArrowIcon.astro";
 
 interface Props {
   href: string;
