fix(*): 💄 balance titles

--- a/src/sections/home/services/ServicesBentoItem/ItemTitle.astro
+++ b/src/sections/home/services/ServicesBentoItem/ItemTitle.astro
@@ -9,7 +9,7 @@ const { subtitle, title } = Astro.props;
 
 <h4
   class={`
-    z-[1] text-center font-bold leading-5
+    z-[1] text-center text-balance font-bold leading-5
     text-lg min-[500px]:text-xl md:text-2xl xl:text-3xl
   `}
 >
