--- a/src/sections/servicios/ServiceAside.astro
+++ b/src/sections/servicios/ServiceAside.astro
@@ -14,7 +14,7 @@ const { slug, title } = Astro.props;
 >
   <div class="grid gap-8 lg:sticky lg:top-24">
     <h1
-      class="font-['Caveat_Brush'] text-white text-center text-4xl lg:text-5xl"
+      class="font-['Caveat_Brush'] text-white text-center text-balance text-4xl lg:text-5xl"
     >
       {title}
     </h1>
