--- a/src/sections/home/services/ServicesBentoItem/Item.astro
+++ b/src/sections/home/services/ServicesBentoItem/Item.astro
@@ -9,11 +9,10 @@ interface Props {
   class?: string;
   lazy: boolean;
   slug: string;
-  subtitle?: string;
   title: string;
 }
 
-const { class: className, lazy, slug, title, subtitle } = Astro.props;
+const { class: className, lazy, slug, title } = Astro.props;
 ---
 
 <article
@@ -28,10 +27,10 @@ const { class: className, lazy, slug, title, subtitle } = Astro.props;
   <ItemBackground
     lazy={lazy}
     slug={slug}
-    altText={`Foto del servicio de '${title}${subtitle ? ` ${subtitle}` : ""}'`}
+    altText={`Foto ilustrativa del servicio de '${title}'`}
   />
   <ItemTitleContainer>
-    <ItemTitle title={title} subtitle={subtitle} />
+    <ItemTitle title={title} />
   </ItemTitleContainer>
   <ItemButtonContainer>
     <ItemButton href={`/servicios/${slug}`} />
