--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,15 +2,12 @@
 import "@fontsource/caveat-brush";
 import "@fontsource-variable/montserrat";
 
-import { ViewTransitions } from "astro:transitions";
-
 import "@/assets/styles/global.css";
 
+import BaseHead from "@/components/BaseHead.astro";
 import Background from "@/components/Background.astro";
 import Header from "@/components/header/Header.astro";
 import Footer from "@/components/footer/Footer.astro";
-
-import { getServicesDescriptionForSeo } from "@/lib/data";
 
 interface Props {
 	title: string;
@@ -21,16 +18,7 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="theme-color" content="#E1306C" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="description" content={getServicesDescriptionForSeo()} />
-		<link rel="icon" type="image/webp" href="/gaterapia-isotype.webp" />
-		<title>{title}</title>
-		<ViewTransitions />
-	</head>
+	<BaseHead title={title} />
 	<body>
 		<Background />
 		<Header />
