feat(/links): 🚚 rename `/links` page

--- a/src/components/header/Navbar.astro
+++ b/src/components/header/Navbar.astro
@@ -38,11 +38,11 @@ const SOCIAL_LINKS = [
     >&nbsp;</span
   >
 
-  <NavbarLink label="Links" href="/links">
+  <NavbarLink label="Info útil" href="/info-util">
     <LinksIcon
       class="size-5 transition-all group-hover:drop-shadow-[0px_0px_3px_#FFFFFF]"
     />
-    <span class="h-5 grid place-items-center">LINKS</span>
+    <span class="h-5 grid place-items-center">INFO ÚTIL</span>
   </NavbarLink>
 </nav>
 <div
